# term-trace

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
term_trace/: __init__.py  cli.py  config.py
term_trace/logger/: session_manager.py
term_trace/scripts/: write_jsonl_entry.py  zsh_jsonl_trace.sh
term_trace/summarizer/: core.py  generic_llm.py  google_docs.py  hf_llm.py  llm_base.py
term_trace/viewer/: app.py
term_trace/workspaces/: manager.py
